Fix service & footer overlapping

--- a/src/pages/Services/Services.scss
+++ b/src/pages/Services/Services.scss
@@ -55,7 +55,7 @@ $footer-height: 9vh;
 .service-content {
     max-width: 1340px;
     margin: 0 auto;
-    margin-bottom: 20px;
+    margin-bottom: 100px;
 }
 
 .ant-tabs-nav-scroll {
